# rust-test

./: .envrc  Cargo.toml
.github/workflows/: build.yaml
src/: main.rs
